// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph does not render dropCap when first children is not plain text 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E3F54;
}

<p
    class="emotion-0"
  >
    <b>
      paragraph
    </b>
     component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders Paragraph 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E3F54;
}

<p
    class="emotion-0"
  >
    paragraph component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders Paragraph with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #2E3F54;
}

<p
    class="emotion-0"
  >
    paragraph component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders Paragraph with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

<p
    class="emotion-0"
  >
    paragraph component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders empty Paragraph with dropCap without crashing  1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E3F54;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Paragraph renders with drop cap 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E3F54;
}

.emotion-1 {
  float: left;
  color: #09111C;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #09111C;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      p
    </span>
    aragraph component
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<span
    class="emotion-0"
  >
    paragraph component
  </span>
</DocumentFragment>
`;

exports[`Paragraph renders with drop cap and complex children 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E3F54;
}

.emotion-1 {
  float: left;
  color: #09111C;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #09111C;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      p
    </span>
    aragraph 
    <b>
      component
    </b>
     with 
    <a
      href="/"
    >
      link
    </a>
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<span
    class="emotion-0"
  >
    paragraph 
    <b>
      component
    </b>
     with 
    <a
      href="/"
    >
      link
    </a>
  </span>
</DocumentFragment>
`;

exports[`Paragraph renders with dropCap logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E3F54;
}

.emotion-1 {
  float: left;
  color: #09111C;
  margin-inline: 8px;
  margin-block: 8px;
  padding-inline: 8px;
  padding-block: 8px;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #09111C;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      d
    </span>
    ropcap with logical props
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<span
    class="emotion-0"
  >
    dropcap with logical props
  </span>
</DocumentFragment>
`;

exports[`Subscript renders Subscript 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 80%;
}

<sub
    class="emotion-0"
  >
    subscript component
  </sub>
</DocumentFragment>
`;

exports[`Superscript renders Superscript 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 80%;
}

<sup
    class="emotion-0"
  >
    superscript component
  </sup>
</DocumentFragment>
`;
